@@ -17,9 +17,9 @@ files[] = metatag.inc
 files[] = metatag.migrate.inc
 files[] = metatag.test
 
-; Information added by Drupal.org packaging script on 2014-10-08
-version = "7.x-1.3"
+; Information added by Drupal.org packaging script on 2014-10-10
+version = "7.x-1.4"
 core = "7.x"
 project = "metatag"
-datestamp = "1412738030"
+datestamp = "1412909330"
 
