@@ -4,9 +4,9 @@ package = SEO
 core = 7.x
 dependencies[] = metatag
 
-; Information added by Drupal.org packaging script on 2014-10-08
-version = "7.x-1.3"
+; Information added by Drupal.org packaging script on 2014-10-10
+version = "7.x-1.4"
 core = "7.x"
 project = "metatag"
-datestamp = "1412738030"
+datestamp = "1412909330"
 
