@@ -9,7 +9,7 @@
  * Implements hook_views_api().
  */
 function metatag_views_views_api() {
-  return array('api' => 3);
+  return array('api' => 3.0);
 }
 
 /**
