@@ -6,51 +6,40 @@
 
 class metatag_views_plugin_display_extender_metatags extends views_plugin_display_extender {
 
-  function init(&$view, &$display) {
-    $display->options['defaults']['metatags'] = array();
-    parent::init($view, $display);
+  /**
+   * Default values.
+   */
+  function options_definition() {
+    $options = parent::option_definition();
+    $options['metatags'] = array('default' => '');
+    return $options;
   }
-
-  function defaultable_sections(&$sections, $section = NULL) {
-    $sections['metatags'] = array('metatags');
-  }
-
-  protected function has_metatags() {
-    $metatags = $this->display->get_option('metatags');
-    return !empty($metatags);
-  }
-
   function options_definition_alter(&$options) {
     $options['metatags'] = array('default' => array());
   }
 
+  /**
+   * Defines where within the Views admin UI the new settings will be visible.
+   */
   function options_summary(&$categories, &$options) {
-    if ($this->has_metatags()) {
-      $categories['metatags'] = array(
-        'title' => t('Meta tags'),
-        'column' => 'second',
-      );
-      $metatags = $this->display->get_option('metatags');
-      $options['metatags'] = array(
-        'category' => 'metatags',
-        'title' => t('Meta tags'),
-        'value' => !empty($metatags) ? t('Overridden') : t('Using defaults'),
-      );
-    }
+    $categories['metatags'] = array(
+      'title' => t('Meta tags'),
+      'column' => 'second',
+    );
+    $options['metatags'] = array(
+      'category' => 'metatags',
+      'title' => t('Meta tags'),
+      'value' => $this->has_metatags() ? t('Overridden') : t('Using defaults'),
+    );
   }
 
+  /**
+   * Defines the form.
+   */
   function options_form(&$form, &$form_state) {
     if ($form_state['section'] == 'metatags') {
       $form['#title'] .= t('The meta tags for this display');
-
-      // Leave some possibility for future versions to support translation.
-      $metatags = $this->display->get_option('metatags');
-      if (empty($metatags)) {
-        $metatags = array(LANGUAGE_NONE => array());
-      }
-      if (!isset($metatags[LANGUAGE_NONE])) {
-        $metatags = array(LANGUAGE_NONE => $metatags);
-      }
+      $metatags = $this->get_metatags();
 
       // Build/inject the Metatag form.
       $instance = 'view:' . $form_state['view']->name;
@@ -62,6 +51,9 @@ class metatag_views_plugin_display_extender_metatags extends views_plugin_displa
     }
   }
 
+  /**
+   * Saves the form values.
+   */
   function options_submit(&$form, &$form_state) {
     if ($form_state['section'] == 'metatags') {
       $metatags = $form_state['values']['metatags'];
@@ -75,5 +67,33 @@ class metatag_views_plugin_display_extender_metatags extends views_plugin_displa
 
       $this->display->set_option('metatags', $metatags);
     }
+  }
+
+  /**
+   * Identify whether or not the current display has custom meta tags defined.
+   */
+  protected function has_metatags() {
+    $metatags = $this->get_metatags();
+    return !empty($metatags[LANGUAGE_NONE]);
+  }
+
+  /**
+   * Get the Metatag configuration for this display.
+   *
+   * @return array
+   *   The meta tag values, keys by language (default LANGUAGE_NONE).
+   */
+  private function get_metatags() {
+    $metatags = $this->display->get_option('metatags');
+
+    // Leave some possibility for future versions to support translation.
+    if (empty($metatags)) {
+      $metatags = array(LANGUAGE_NONE => array());
+    }
+    if (!isset($metatags[LANGUAGE_NONE])) {
+      $metatags = array(LANGUAGE_NONE => $metatags);
+    }
+
+    return $metatags;
   }
 }
