@@ -1,3 +1,9 @@
+Metatag 7.x-1.4, 2014-10-09
+---------------------------
+#2353079 by DamienMcKenna: Fixed Views integration, for real this time.
+#2344877 by DamienMcKenna: Fixed Panels integration, for real this time.
+
+
 Metatag 7.x-1.3, 2014-10-07
 ---------------------------
 #2350967 by das-peter, DamienMcKenna: Fatal error occurred loading any View that
